--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,13 +68,13 @@ body {
         padding: 32px 16px;
     }
 }
-@include grid("medium-tablet") {
+@include grid("large-tablet") {
     .container {
     }
 }
 @include grid("desktop") {
     .container {
-        // padding: 0 128px;
+        padding: 0 128px;
     }
 
     .card {
