--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,19 +1,29 @@
 <div class="row container" [ngClass]="getNavbarColorClass()">
-    <div class="row flex__start-horizontal-align center-vertical-align flex__start-area">
-        <span class="flex__start-area__title">Multiplayer Game</span>
-    </div>
-    <div class="row center-horizontal-align center-vertical-align center-area">
-    </div>
-    <div class="row flex__end-horizontal-align center-vertical-align flex__end-area">
-        <div>
-            <button mat-icon-button [matMenuTriggerFor]="menu">
-                <mat-icon svgIcon="translate-white"></mat-icon>
-            </button>
-            <mat-menu #menu="matMenu" class="custom">
-                <button mat-menu-item *ngFor="let language of languages" (click)="onSelectLanguage(language)">
-                    <span>{{language}}</span>
+    <div class="row center-vertical-align" *ngFor="let area of navbarAreas"
+        [ngClass]="getNavbarAreaAlignment(area.cssClass)">
+        <div class="row" *ngIf="getNavbarTitleAlignment(area.align, config.title.align)">
+            <span class="flex__start-area__title">Multiplayer Game</span>
+        </div>
+        <div *ngFor="let button of getNavbarAreaButtons(area.align)">
+            <div *ngIf="!button.hasMatMenu; else buttonMatMenu">
+                <button>
+                    <mat-icon *ngIf="button.hasIcon; else buttonWithoutIcon" [svgIcon]="button.svgIconName ||''">
+                    </mat-icon>
+                    <ng-template #buttonWithoutIcon>
+                        <span>{{button.name}}</span>
+                    </ng-template>
                 </button>
-            </mat-menu>
+            </div>
+            <ng-template #buttonMatMenu>
+                <div>
+                    <button mat-icon-button [matMenuTriggerFor]="menu">
+                        <mat-icon *ngIf="button.hasIcon" [svgIcon]="button.svgIconName ||''"></mat-icon>
+                    </button>
+                    <mat-menu #menu="matMenu" class="custom"><button mat-menu-item (click)="onClick(button.id, value)"
+                            *ngFor="let value of button.matMenuOptions?.values "><span>{{value}}</span></button>
+                    </mat-menu>
+                </div>
+            </ng-template>
         </div>
     </div>
 </div>
