change app-navbar input and output prop

--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <app-navbar [color]="'unset'"></app-navbar>
+    <app-navbar [config]="navbarConfig" (clickedButtonName)="onGetClickedButtonName($event)"></app-navbar>
     <div class="column center-horizontal-align center-vertical-align container">
         <!-- Início do card de login -->
         <div class="column no-wrap card login-card">
