deprecate game components

--- a/src/app/game/components/chat/chat.component.html
+++ b/src/app/game/components/chat/chat.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
     <div *ngIf="messages$ | async as messages">
         <mat-list #chat>
             <mat-list-item *ngFor="let message of messages">
@@ -7,8 +7,8 @@
         </mat-list>
     </div>
     <mat-form-field>
-        <!-- Mudar texto para arquivo de constantes de idioma -->
+        Mudar texto para arquivo de constantes de idioma
         <mat-label>Enviar Mensagem</mat-label>
         <input id="chatInput" matInput type="text" (keydown.enter)="enviarMensagem($event.target)">
     </mat-form-field>
-</div>
+</div> -->
