--- a/src/app/game/components/game-log/game-log.component.html
+++ b/src/app/game/components/game-log/game-log.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="log$ | async">
+<!-- <div *ngIf="log$ | async">
     <mat-list>
         <mat-list-item *ngFor="let log of logList">
             {{ log }}
@@ -14,4 +14,4 @@
 
 <button mat-button color="primary" (click)="sair()">
     Sair
-</button>
+</button> -->
