--- a/src/app/game/components/game/game.component.html
+++ b/src/app/game/components/game/game.component.html
@@ -1,27 +1,27 @@
-<div class="wrapper">
+<!-- <div class="wrapper">
     <app-navbar [config]="navbarConfig" (clickedButtonName)="onGetClickedButtonName($event)"></app-navbar>
     <div class="container">
         <mat-grid-list cols="6" rowHeight="4:1">
-            <!-- Lateral Esquerda  Superior-->
+            Lateral Esquerda  Superior
             <mat-grid-tile rowspan="5" colspan="1">
                 <app-user-list></app-user-list>
             </mat-grid-tile>
 
-            <!-- Tela principal -->
+            Tela principal
             <mat-grid-tile rowspan="10" colspan="4">
                 Jogo vai aqui
             </mat-grid-tile>
 
-            <!-- Lateral Direita -->
+            Lateral Direita
             <mat-grid-tile rowspan="10" colspan="1">
                 <app-game-log></app-game-log>
             </mat-grid-tile>
 
-            <!-- Lateral Esquerda  Inferior-->
+            Lateral Esquerda  Inferior
             <mat-grid-tile rowspan="5" colspan="1">
                 <app-chat></app-chat>
             </mat-grid-tile>
 
         </mat-grid-list>
     </div>
-</div>
+</div> -->
