--- a/src/app/game/components/user-list/user-list.component.html
+++ b/src/app/game/components/user-list/user-list.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="users$ | async as users">
+<!-- <div *ngIf="users$ | async as users">
   <mat-list #userList>
     <mat-list-item *ngFor="let user of users">
       {{user?.name}}
@@ -9,4 +9,4 @@
       </div>
     </mat-list-item>
   </mat-list>
-</div>
+</div> -->
